...
                    android:paddingTop="10dp"
                    android:orientation="vertical">

                    <!-- Прямой вызов RecyclerView без ScrollView.
                         Чтобы не пропадал скролл, убираем margin-bottom в 50dp -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rwListMain"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.0"
                        android:padding="5dp"/>

                    <!-- Поле ввода и штрихкод -->
...
                            android:layout_weight="0.8"
                            android:paddingStart="10dp"
                            android:textColor="@color/regularGrey"
                            android:textSize="25sp" />

                        <EditText
                            android:id="@+id/etCount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:layout_marginEnd="10dp"
                            android:enabled="true"
                            android:maxLines="1"
...
                            android:textSize="25sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Нижний блок: занимает оставшиеся 50% экрана -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rwListItem"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:padding="5dp"/>

            </LinearLayout>
...
