<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:id="@+id/popup_menu"
    >

    <Button
        android:id="@+id/btnScanningMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scanning mode"
        android:textColor="@color/regularBlue"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Finish"
        android:textColor="@color/regularBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanningMode" />



</androidx.constraintlayout.widget.ConstraintLayout>